@@ -15,6 +15,7 @@ Sigil-pre0.9.10
     - Fix crash bug after styling text in BookView and immediately going to CodeView without moving cursor
     - Fix crash bugs after deleting resources contained in a Report in the BookBrowser
     - Fix bug that destroys nav if left in unparseable state by user even temporarily
+    - Fix bug that moved curosr to beginning of tag block when save is done in CodeView
 
    New Features
     - allow plugins to supply their own icon (plugin.png 48x48) for use on the Quick Launch Toolbar icons
